<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/navigation_study"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_study" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_calendar" />

    <item
        android:id="@+id/navigation_store"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_store" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_profile" />
</menu>
