<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.edumaster.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard">
        <action
            android:id="@+id/action_dashboard_to_study"
            app:destination="@id/navigation_study"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_study"
        android:name="com.edumaster.ui.study.StudyFragment"
        android:label="@string/nav_study" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.edumaster.ui.calendar.CalendarFragment"
        android:label="@string/nav_calendar" />

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.edumaster.ui.store.StoreFragment"
        android:label="@string/nav_store" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.edumaster.ui.profile.ProfileFragment"
        android:label="@string/nav_profile" />
</navigation>
